--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
             <div class="readme-wrapper"><a
                     href="https://www.bing.com/search?q=boxes&cvid=92cc091723f64c3289738eb80d7b16b6&aqs=edge..69i57j0l8.4525j0j4&FORM=ANAB01&PC=U531">Read
                     More</a></div>
+        </div>
             <div class="boxes" id="box3">
                 <h2>Box Three</h2>
                 <p>This is my box <span>three</span></p>
                 <div class="readme-wrapper"><a
                         href="https://www.bing.com/search?q=boxes&cvid=92cc091723f64c3289738eb80d7b16b6&aqs=edge..69i57j0l8.4525j0j4&FORM=ANAB01&PC=U531">Read
                         More</a></div>
+            </div>
                 <div class="boxes" id="box4">
                     <h2>Box Four</h2>
                     <p>This is my box <span>four</span></p>
