--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div id="Container">
         <div class="boxes" id="box1">
+            <div class="image"></div>
             <h2>Box One</h2>
             <p>This is my box <span>one</span></p>
             <div class="readme-wrapper"><a
@@ -15,6 +16,7 @@
                     More</a></div>
         </div>
         <div class="boxes" id="box2">
+            <div class="image"></div>
             <h2>Box Two</h2>
             <p>This is my box <span>two</span></p>
             <div class="readme-wrapper"><a
@@ -22,6 +24,7 @@
                     More</a></div>
         </div>
             <div class="boxes" id="box3">
+                <div class="image"></div>
                 <h2>Box Three</h2>
                 <p>This is my box <span>three</span></p>
                 <div class="readme-wrapper"><a
@@ -29,6 +32,7 @@
                         More</a></div>
             </div>
                 <div class="boxes" id="box4">
+                    <div class="image"></div>
                     <h2>Box Four</h2>
                     <p>This is my box <span>four</span></p>
                     <div class="readme-wrapper"> <a
