--- a/index.html
+++ b/index.html
@@ -17,28 +17,63 @@
         </div>
         <div class="boxes" id="box2">
             <div class="image"></div>
+
             <h2>Box Two</h2>
             <p>This is my box <span>two</span></p>
             <div class="readme-wrapper"><a
                     href="https://www.bing.com/search?q=boxes&cvid=92cc091723f64c3289738eb80d7b16b6&aqs=edge..69i57j0l8.4525j0j4&FORM=ANAB01&PC=U531">Read
                     More</a></div>
         </div>
-            <div class="boxes" id="box3">
-                <div class="image"></div>
-                <h2>Box Three</h2>
-                <p>This is my box <span>three</span></p>
-                <div class="readme-wrapper"><a
-                        href="https://www.bing.com/search?q=boxes&cvid=92cc091723f64c3289738eb80d7b16b6&aqs=edge..69i57j0l8.4525j0j4&FORM=ANAB01&PC=U531">Read
-                        More</a></div>
-            </div>
-                <div class="boxes" id="box4">
-                    <div class="image"></div>
-                    <h2>Box Four</h2>
-                    <p>This is my box <span>four</span></p>
-                    <div class="readme-wrapper"> <a
-                            href="https://www.bing.com/search?q=boxes&cvid=92cc091723f64c3289738eb80d7b16b6&aqs=edge..69i57j0l8.4525j0j4&FORM=ANAB01&PC=U531">Read
-                            More</a></div>
-                </div>
+        <div class="boxes" id="box3">
+            <div class="image"></div>
+
+            <h2>Box Three</h2>
+            <p>This is my box <span>three</span></p>
+            <div class="readme-wrapper"><a
+                    href="https://www.bing.com/search?q=boxes&cvid=92cc091723f64c3289738eb80d7b16b6&aqs=edge..69i57j0l8.4525j0j4&FORM=ANAB01&PC=U531">Read
+                    More</a></div>
+        </div>
+        <div class="boxes" id="box4">
+            <div class="image"></div>
+
+            <h2>Box Four</h2>
+            <p>This is my box <span>four</span></p>
+            <div class="readme-wrapper"> <a
+                    href="https://www.bing.com/search?q=boxes&cvid=92cc091723f64c3289738eb80d7b16b6&aqs=edge..69i57j0l8.4525j0j4&FORM=ANAB01&PC=U531">Read
+                    More</a></div>
+        </div>
+        <h1 class="original" id="one">Scandal</h1>
+        <h1 class="original" id="three">How to get away with murder</h1>
+        <h1 class="original" id="four">Breaking Bad</h1>
+        <h1 class="additional" id="five">Murdres in the building</h1>
+        <h1 class="additional" id="two">the Good Place</h1>
+        <div class="list">
+            <ul>
+                <li>Kelly</li>
+                <li>Scott</li>
+                <li>Brittney</li>
+                <li>Alyssa</li>
+                <li>McAllister</li>
+            </ul>
+        </div>
+        <div class="list">
+            <ul class="Star">
+                <li>Italy</li>
+                <li>Germany</li>
+                <li>Greece</li>
+                <li>Bora Bora</li>
+                <li>Africa</li>
+            </ul>
+        </div>
+        <div class="list">
+            <ul class="Star" id="wars">
+                <li>Mac and Cheese</li>
+                <li>Pizza</li>
+                <li>Muscles</li>
+                <li>Mashed Potatoes</li>
+                <li>Green Beans</li>
+            </ul>
+            <div>
 </body>
 
 </html>
